class Game {
  readonly title: string;
  readonly id: string;

  constructor(title: string, id: string) {
    this.title = title;
    this.id = id;
  }
}