export enum AccessType {
  ENTRY = "入室",
  EXIT = "退室"
}