@startuml
package api
{
    package caches
    {
        class Cache
        {
            +{static}get<T extends Cacheable<T>>(): T[]
            +{static}getOrMake<T extends Cacheable<T>>(): T[]
            +{static}make<T extends Cacheable<T>>(): T[]
        }
        interface Cacheable<T>
        {
            +<<readonly>>key: string
            +<<readonly>>cacheSourceSheetID: string
            +fromSpreadsheet(spreadsheet: GoogleAppsScript.Spreadsheet.Spreadsheet): T[]
            +toInstances(cached: object[]): T[]
        }
    }
    package logger
    {
        package "models "
        {
            class AccessInfo
            {
                +<<readonly>>room: RoomInfo
                +<<readonly>>member: Member
                +<<readonly>>type: AccessType
                +<<readonly>>time: Date
            }
            enum AccessType
            {
                ENTRY,
                EXIT
            }
        }
        class AccessLogger
        {
            +{static}log(context: AccessInfo): void
        }
    }
    package models
    {
        package queries
        {
            class ID
            {
                +id: string
            }
            class NameAndCampus
            {
                +name: string
                +campus: string
            }
        }
        package requests
        {
            class AccessRequest
            {
                +id: string
                +place: { campus: string, name: string }
            }
            class RegisterMember
            {
                +id: number
                +name: string
                +discord: Discord
            }
            class UpdatedNickname
            {
                +nickname: string
            }
        }
        package responses
        {
            class Discord
            {
                +<<readonly>>id: string
                +<<readonly>>nickname: string
            }
            class Error 
            {
                +message: string
            }
            class Game
            {
                +<<readonly>>title: string
                +<<readonly>>id: string
            }
            class Member
            {
                +<<readonly>>id: number
                +<<readonly>>name: string
                +<<readonly>>discord: Discord
                +<<readonly>>games: Game[]
            }
            class NoneResponse 
            abstract Response
            {
                +toJSON(): object
            }
            class Room
            {
                +<<readonly>>info: RoomInfo
                +<<readonly>>inmates: Member[]
                +entry(member: Member): void
                +exit(member: Member): void
            }
            class RoomInfo
            {
                +<<readonly>>campus: string
                +<<readonly>>name: string
            }
        }
        abstract DTO<T>
    }
    package routes
    {
        package controllers
        {
            package MemberController
            {
                class "Index" as MemberIndex
                class Update
                class Register
            }
            package RoomController
            {
                class "Index " as RoomIndex
                class Entry
                class Exit
            }
        }
        package " models"
        {
            interface Endpoint<Success extends Response>
            {
                +path: string
                +execute(parameter: object, postdata?: {[key: string]: any}): Success | Success[] | Error
            }
            package MethodType
            {
                interface Get<Success extends Response>
                {
                    +execute(parameter: object): Success | Success[] | Error
                }
                interface Post<Success extends Response>
                {
                    +execute(parameter: object, postdata: {[key: string]: any}): Success | Success[] | Error
                }
            }
        }
        class Route
        {
            {static}<<readonly>>_routes: Endpoint[]
            +{static}get(path: string): Endpoint
        }
    }
}
package utils
{
    package extensions
    {
        class Date
        {
            +{static}getDayToJapanese(): string
        }
        class String
        {
            +{static}insertAt(index: number, context: string): string
        }
    }
}

Response -up-|> DTO
Member -up-|> Response
Room -up-|> Response
Error -up-|> Response
NoneResponse -up-|> Response
AccessRequest -up-|> DTO
RegisterMember -up-|> DTO
UpdatedNickname --|> DTO
ID -up-|> DTO
NameAndCampus -up-|> DTO
Get --|> Endpoint
Post --|> Endpoint

Member ..|> Cacheable
Room ..|> Cacheable
MemberIndex ..|> Get
Update ..|> Post
Register ..|> Post
Entry ..|> Post
Exit ..|> Post
RoomIndex ..|> Get

Member "1" *-- "1" Discord
Member "1" *-- "*" Game
Room "1" *-- "1" RoomInfo
Room "1" *-- "*" Member
Route "1" *-- "*" Endpoint

Cache -up-> Cacheable
AccessInfo --> Date
Room --> String
AccessLogger --> AccessInfo
Endpoint --> Response
MemberIndex --> ID
MemberIndex -up-> Cache
Update -up> ID
Update -up-> UpdatedNickname
Update -up-> Cache
Register -up-> RegisterMember
Register -up-> Cache
RoomIndex -up-> NameAndCampus
RoomIndex -up-> Cache
Entry -up-> AccessRequest
Entry -up-> AccessLogger
Entry -up-> Cache
Exit -up-> AccessRequest
Exit -up-> AccessLogger
Exit -up-> Cache


@enduml